Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoClone.out
NoClone.java:10:5: compiler.err.invalid.annotation.member.type
NoClone.java:10:12: compiler.err.intf.annotation.member.clash: clone(), java.lang.Object
2 errors
